--- a/mfbc.us/m/vhs66m.html
+++ b/mfbc.us/m/vhs66m.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 
-<!-- Mirrored from mfbc.us/m/vhs66m by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Apr 2020 08:55:52 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<!-- Added   --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added   -->
 <head>
 <meta charset="UTF-8">
 <meta property="og:type" content="article" />
